# mmx

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
crates/mmx-ftdc/: Cargo.toml
crates/mmx-ftdc/src/: bson_ext.rs  chunk.rs  lib.rs  reader.rs  varint.rs
crates/mmx-ftdc/tests/: integration.rs
crates/mmx-tui/: Cargo.toml
crates/mmx-tui/examples/: diag.rs  dump.rs
crates/mmx-tui/src/: app.rs  event.rs  format.rs  main.rs
crates/mmx-tui/src/ui/: footer.rs  header.rs  metrics.rs  mod.rs  pinned.rs
scripts/: generate_load.sh  workload.js
src/: app.rs  bson_ext.rs  event.rs  format.rs  main.rs  metric.rs  source.rs  theme.rs
src/ui/: chart.rs  footer.rs  header.rs  metrics.rs  mod.rs  pinned.rs
