[workspace]
members = ["crates/mmx-ftdc", "crates/mmx-tui"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
mmx-ftdc = { path = "crates/mmx-ftdc" }
bson = "2"
flate2 = "1"
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
notify = "7"
