[package]
name = "mmx"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "real-time terminal dashboard for MongoDB serverStatus metrics"

[[bin]]
name = "mmx"
path = "src/main.rs"

[dependencies]
bson = "2"
mongodb = { version = "3", features = ["snappy-compression", "zstd-compression"] }
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
libc = "0.2"
