[package]
name = "mmx-tui"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "htop-like TUI for MongoDB FTDC metrics"

[[bin]]
name = "mmx"
path = "src/main.rs"

[dependencies]
mmx-ftdc = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
notify = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
